API  REMOVE POST
